--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: What I learn on the way
-email: isaiemanu123@gmail.com
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
     Physics, Maths and Programming.
 baseurl: "" # the subpath of your site, e.g. /blog
