--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ kramdown:
     input: GFM
     syntax_highlighter: rouge
 
+remote_theme: b2a3e8/jekyll-theme-console
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
