--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: QuantumOfVacuum's Personal Blog
+title: Gaugeo
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
     Physics, Maths and Programming.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://iedavilac.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  iedavilac
 
         
@@ -27,6 +27,7 @@ markdown: kramdown
 plugins:
   - jekyll-feed
   - jekyll-archives
+  - jekyll-sitemap
 
 # Syntax highlighting
 highlighter: rouge
@@ -35,6 +36,8 @@ kramdown:
     syntax_highlighter: rouge
 
 remote_theme: b2a3e8/jekyll-theme-console
+
+
 
 
 # Exclude from processing.
