--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Curious Manifold
-email:  
-description: Physics, Maths and Programming.
+title: "Curious Manifold"
+email: 
+description: >- # this means to ignore newlines until "baseurl:"
+    Physics, Maths and Programming.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://iedavilac.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  iedavilac
+url: "https://iedavilac.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github_username: iedavilac
 
         
 # Build settings
